tests/golden/type_errors/function_type_call_arg_mismatch.cd
fun apply(f: fun(number): number): number {
  return f("bad");
}
